# Particle_Phys_Angular_Decay_Model

./: README.md
DecayModel_Rare/: reweightMC.cc
DecayModel_Rare/form-factors/: README
DecayModel_Rare/form-factors/AAS07/: BK0star_QCDRS.json
DecayModel_Rare/form-factors/ABHH99/: B2Kst.json  B2Kst_minimum.json
DecayModel_Rare/form-factors/BZ04/: BKstar_LCSR.json  Brho_LCSR.json  Bw_LCSR.json
DecayModel_Rare/form-factors/CFW10/: Bsf0_EVTGEN.json  Bsf0_LCSR.json
DecayModel_Rare/form-factors/ESS18/: B2f1270_LCSR.json
DecayModel_Rare/form-factors/MS00/: B2rho_LCSR.json
DecayModel_Rare/form-factors/WANG10/: Bsf980_LCSR.json
DecayModel_Rare/form-factors/YANG10/: BK2star_LCSR.json  Bf2_LCSR.json  BsK2star_LCSR.json  Bsf2prime_LCSR.json
DecayModel_Rare/include/: AmplitudeSet.h  Amplitudes.h  EvtGenAmplitudes.h  EvtGenFormFactor.h  EvtGenWilson.h  FFcalculation.h  FFparser.h  FormFactorBase.h  HHLineShapeBase.h  HistogramInterval.h  Kinematic.h  LineShapes.h  Parameters.h  RandomSampling.h  ResonanceBase.h  ResonanceParser.h  ScalarResonance.h  SphericalHarmonics.h  StatTools.h  VectorResonance.h  Wilson.h  generator.h
DecayModel_Rare/resonances/: B2Kpi_FullModel.json  B2Kpi_K2star1430.json  B2Kpi_Kst1410.json  B2Kpi_Kst1430.json  B2Kpi_Kst892.json  B2Kpi_kappa800.json  B2KstmumuDecFile.json  B2pipi_FullModel.json  B2pipi_f0500.json  B2pipi_f21270.json  B2pipi_omega.json  B2pipi_rho1450.json  B2pipi_rho1700.json  B2pipi_rho770.json  B2rhomumuDecFile.json  Bs2pipi_FullModel.json  Bs2pipi_f01500.json  Bs2pipi_f01790.json  Bs2pipi_f0980.json  Bs2pipi_f21270.json  Bs2pipi_f21525.json  Bsf0mumuDecFile.json
DecayModel_Rare/src/: AmplitudeSet.cpp  Amplitudes.cpp  CMakeLists.txt  EvtGenAmplitudes.cpp  EvtGenFormFactor.cpp  EvtGenWilson.cpp  FFcalculation.cpp  FFparser.cpp  HHLineShapeBase.cpp  HistogramInterval.cpp  Kinematic.cpp  LineShapes.cpp  Parameters.cpp  RandomSampling.cpp  ResonanceBase.cpp  ResonanceParser.cpp  ScalarResonance.cpp  SphericalHarmonics.cpp  StatTools.cpp  VectorResonance.cpp  Wilson.cpp  generator.cpp
DecayModel_Resonant/: CMakeLists.txt  CalcHelicityAngles.cpp
DecayModel_Resonant/config/: B2rhoJpsi.json  B_pipi_fullmodel_trans.json  Bs2f0Jpsi.json  Bs_pipi_fullmodel_trans.json  DecFileKpi.json  DecFileKst.json  DecFilef0.json  DecFilerho.json  bellemodel.json
DecayModel_Resonant/include/: Event.h  FitParameter.h  HelperFunctions.h  KPiResonanceBW.h  KPiResonanceBWNorm.h  KPiResonanceBase.h  KPiResonanceFlatte.h  KPiResonanceLASS.h  KPiResonanceNR.h  KinematicFunctions.h  OptionsParser.h  Parser.h  PsiKPiAmplitudeModel.h  PsiKPiFitter.h  PsiPiResonance.h  SplineModel.h  Variables.h  Wignerd.h  json_parser.hpp  json_parser_read.hpp
DecayModel_Resonant/src/: CMakeLists.txt  Event.cc  FitParameter.cc  HelperFunctions.cc  KPiResonanceBW.cc  KPiResonanceBWNorm.cc  KPiResonanceBase.cc  KPiResonanceFlatte.cc  KPiResonanceLASS.cc  KPiResonanceNR.cc  KinematicFunctions.cc  OptionsParser.cc  Parser.cc  PsiKPiAmplitudeModel.cc  PsiKPiFitter.cc  PsiPiResonance.cc  SplineModel.cc  Variables.cc  Wignerd.cc
DecayModel_Resonant/test/: CMakeLists.txt  KpiJpsiMC_reweight.cc  acceptreject.cc  f0JpsiMC_reweight.cc  fitfraction.cc  projectionBs.cc  rhoJpsiMC_reweight.cc
